Update test stability
Fixes for a number of issues causing tests to fail:
* Install test certificates from pfx file containing test certificate
with separate root certificate - adding bindings was failing with old
certificate
* Update test certificate installation process
* Fix assertions on netsh output failing due to output format (spacing)

--- a/src/SslCertBinding.Net.Tests/SslCertBinding.Net.Tests.csproj
+++ b/src/SslCertBinding.Net.Tests/SslCertBinding.Net.Tests.csproj
@@ -55,11 +55,13 @@
   <ItemGroup>
     <Compile Include="CertConfigCmd.cs" />
     <Compile Include="IpEndpointTools.cs" />
+    <Compile Include="NetshShowOutputTester.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="TestCertificateInstaller.cs" />
     <Compile Include="UnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -70,7 +72,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\certCA.pfx" />
+    <None Include="Resources\SSLCertBinding.Net.Sample.Tests.pfx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SslCertBinding.Net\SslCertBinding.Net.csproj">
