Add support for SNI bindings
* Extend the set, delete and query functionality to support
HttpServiceConfigSslSniCertInfo options
* Include SupportsSslSniBindings method to allow compatibility check (only available Windows 8 onwards)
* Introduce BindingEndPoint class for IP or SNI bindings
* Extend samples and tests

--- a/src/SslCertBinding.Net.Tests/SslCertBinding.Net.Tests.csproj
+++ b/src/SslCertBinding.Net.Tests/SslCertBinding.Net.Tests.csproj
@@ -53,6 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BindingEndPointTests.cs" />
     <Compile Include="CertConfigCmd.cs" />
     <Compile Include="IpEndpointTools.cs" />
     <Compile Include="NetshShowOutputTester.cs" />
@@ -62,7 +63,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="TestCertificateInstaller.cs" />
-    <Compile Include="UnitTests.cs" />
+    <Compile Include="CertificateBindingConfigurationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
